# ai_chatbot

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  chat.js  index.html  login.html  responses.js  style.css  styles.css  styles.css.map  styles.scss  train.html  train.js
backend/: CMakeLists.txt  README.md  server.cpp
public/: README.md  chat.js  chat2.js  index.html  index.php  responses.json  save_responses.php  style.css  train.html  train.js  train.php
public/php/: save_responses.php
